Fix spacing for ul elements

--- a/src/styles/WebPage.pcss
+++ b/src/styles/WebPage.pcss
@@ -101,11 +101,17 @@
           & td:first-child {
             max-width: 30%;
             min-width: 30%;
+            padding-right: 5px;
           }
         }
 
         & td {
+          width: 100%;
           padding: 10px 0;
+
+          & ul:first-child {
+            padding-left: 15px;
+          }
         }
 
         & tr td:first-child {
